# 2030Capstone

./: .gitignore  README.md  airial.containerfile  bootstrap-dev.compose.yml  databaseschema.ods  development.compose.yml  development.prongapi.containerfile  development.prongwebapp.containerfile  example.env  production.compose.yml  production.prongapi.containerfile  production.prongwebapp.containerfile  pytest.ini  requirements.txt  storageMemo.md
.stfolder/: syncthing-folder-e59a43.txt
AnnotationSoftware/: ML_Report.txt  cg_tui.py  classnames.py  crop_generator.py  database.py  databaseschema.ods  example_env.txt  generate_pred_crops.py  imagebackends.py  inference.py  main.py  pyproject.toml  requirements.txt
AnnotationSoftware/CropGenAPI/: cg_api.py
AnnotationSoftware/cropgenerator/: __init__.py
AnnotationSoftware/cropgenerator/classnames/: classnames.py
AnnotationSoftware/cropgenerator/crop_generator/: crop_generator.py
AnnotationSoftware/cropgenerator/cropgenerator/: cropgenerator.py
AnnotationSoftware/cropgenerator/database/: database.py
AnnotationSoftware/cropgenerator/generator_objects/: generatorobjects.py
AnnotationSoftware/cropgenerator/generatorobjects/: generatorobjects.py
AnnotationSoftware/cropgenerator/imagebackends/: imagebackends.py
airial_api/: app.py  crop_generator.py  gunicorn.py  pyproject.toml  requirements.txt
airial_api/app/: __init__.py  decorators.py  errors.py  extensions.py
airial_api/app/routers/: __init__.py  annotations.py  authenticate.py  autocropper.py  cropverifier.py  herd_units.py  images.py  labels.py  models.py  organizations.py  predictions.py  projects.py  reviewed_area.py  roles.py  schemas.py  surveys.py  system.py  users.py
airial_api/database/: __init__.py  database.py  errors.py
airial_api/database/object_models/: __init__.py  autocropper.py  base.py  verifier.py
airial_api/database/object_models/core/: __init__.py  annotations.py  images.py  predictions.py
airial_api/database/object_models/project_management/: __init__.py  herd_units.py  labels.py  models.py  projects.py  schemas.py  surveys.py
airial_api/database/object_models/user_management/: __init__.py  organizations.py  roles.py  users.py
airial_api/database/spicedb_schema/: schema.zed
airial_api/database/sql_scripts/: db_definitions.sql  drop_fkey.sql  fix_predictions_not_annotations.sql  update_image_table_temp.sql  update_users_oauth.sql  user_organizations.sql
annotation_api/: app.py  config.py
annotation_api/app/: __init__.py  decorators.py  extensions.py
annotation_api/database/: __init__.py  database.py  errors.py  query_builder.py
annotation_software/: .env.swp  README.md  compose.yml  delete.py  development.compose.yml  development.prongapi.containerfile  development.prongwebapp.containerfile  package-lock.json  package.json  production.compose.yml  production.prongapi.containerfile  production.prongwebapp.containerfile  requirements.txt  requirments.txt
annotation_software/annotation_api/: .flaskenv  app.py  config.py  gunicorn.py
annotation_software/crop_generator/: pyproject.toml
annotation_software/generator_api/: cg_api.py  containerfile.prongapi  test_db.py
annotation_software/generator_tui/: cg_tui.py
annotation_software/generator_web_app/: README.md  containerfile.prongwebapp  index.html  nginx.conf  package-lock.json  (+4 more)
etl-pipeline/: cupboard.py  generic_user_accounts_5000.csv  requirements.txt  user-load-etl.ipynb
generator_web_app/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
local_db/: backup.zed  bootstrap.sh  db_definitions.sql  restore.sh
src/: development.prongapi.containerfile  production.compose.yml  production.prongapi.containerfile  production.prongwebapp.containerfile  requirements.txt
testing/: conftest.py
training/: inference.py  train.py
(+225 files in other folders)
