[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropgenerator"
version = "0.1.0"
description = "Generate crops of images based on kmeans clustering on machine learning predictions."
authors = [    
    { name = "Ben Koger", email = "bkoger@uwyo.edu"}, 
    { name = "Michael Lance", email = "mlance4@uwyo.edu"}
    ]
dependencies = [
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "python-dotenv>=1.0.1",
    "labelbox>=6.7.0",
    "lbox-clients>=1.1.2",
    "typing_extensions>=4.12.2",
    "typeguard>=4.4.1",
    "psycopg2>=2.9.10",
    "pysqlite3>=0.5.4",
]
requires-python = ">=3.13.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

