[project]
name = "annotation-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "authzed==1.24.3",
    "blinker==1.9.0",
    "boto3==1.38.36",
    "botocore==1.38.36",
    "cachelib==0.13.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "flask==3.1.1",
    "flask-caching==2.3.1",
    "flask-cors==6.0.0",
    "flask-login==0.6.3",
    "flask-principal==0.4.0",
    "flask-pydantic==0.14.0",
    "flask-security==5.6.2",
    "flask-session==0.8.0",
    "flask-wtf==1.2.2",
    "fonttools==4.58.0",
    "geojson==3.2.0",
    "gevent==25.9.1",
    "google-api-core==2.24.2",
    "google-auth==2.40.1",
    "google-re2==1.1.20251105",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpc-interceptor==0.15.4",
    "grpcio==1.78.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.8",
    "labelbox==6.10.0",
    "lark==1.3.1",
    "lbox-clients==1.1.2",
    "libpass==1.9.3",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mistune==3.2.0",
    "msgpack==1.1.2",
    "msgspec==0.19.0",
    "mypy==1.10.1",
    "mypy-extensions==1.1.0",
    "numpy==2.2.6",
    "opencv-python-headless==4.11.0.86",
    "packaging==25.0",
    "pendulum==3.2.0",
    "pillow==11.2.1",
    "pluggy==1.6.0",
    "proto-plus==1.26.1",
    "protobuf>=5.28.3",
    "protovalidate==1.1.2",
    "psycopg-pool==3.2.6",
    "psycopg[binary]>=3.3.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygeotile==1.0.6",
    "pygments==2.19.2",
    "pyopenssl==25.3.0",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "pytest==9.0.2",
    "pytest-dotenv==0.5.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.3",
    "redis==6.2.0",
    "referencing==0.37.0",
    "requests==2.32.3",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "s3transfer==0.13.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "strenum==0.4.15",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typeguard==4.4.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.3",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "zope-event==6.0",
    "zope-interface==8.0.1",
]
